# FCLMua

./: .gitignore  .gitmodules  AGENTS.md  BUILD_FIX_SUMMARY.md  BUILD_GUIDE.md  BUILD_IMPROVEMENTS.md  BUILD_SYSTEM.md  BUILD_TEST_CHECKLIST.md  BUILD_TEST_COMPLETE.md  BUILD_TEST_REPORT.md  CI_ISSUE_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  Directory.Build.targets  FIXES_APPLIED.md  LICENSE  PUBLISH_CHECKLIST.md  QUICKSTART.md  README.md  build.ps1  build_driver.cmd  cleanup_record.md  run_all_tests.bat  test_manual_build.cmd  test_wdk_detection.ps1
.github/workflows/: build.yml  release.yml  wdk-driver.yml  windows-build.yml
archive/build_scripts/: build_all_and_sign.ps1  build_and_sign_driver.cmd  build_driver.cmd  run_all_tests.sh
archive/cleanup-2025-11-30/: FINAL_SUMMARY.md  POWERSHELL_MIGRATION.md  README.txt
archive/deprecated-2025-11-29/: build_all.ps1  build_all_backup.ps1  build_interactive.ps1  cleanup_old_scripts.ps1  fcl-self-test.ps1  find_vs_devcmd.ps1  fix_build_all_encoding.ps1  fix_line_endings.ps1  manual_build.cmd  menu.ps1  menu_build.ps1  menu_checkenv.ps1  menu_doc.ps1  menu_test.ps1  menu_upstream.ps1  resolve_wdk_env.ps1  verify_menu_system.ps1
archive/gui_demo/: FCL_GUI_Modernization_Plan.md
archive/openspec_changes/port-fcl-to-kernel/: ACCEPTANCE.md  IMPLEMENTATION_ROADMAP.md  TECHNICAL_ANALYSIS.md  design.md  tasks.md
archive/openspec_changes/refactor-thin-fcl-layer/: proposal.md
archive/openspec_changes/update-use-upstream-fcl/: design.md  tasks.md
build-eigen/: CMakeCache.txt  DartConfiguration.tcl  Eigen3ConfigVersion.cmake  cdashtesting.cmake
build-eigen/doc/: Doxyfile  Doxyfile-unsupported
cmake/: FclMusaCPMTemplate.cmake
cmake/fcl_compat/fcl/: config.h
docs/: EIGEN_ADAPTATION.md  FILE_STRUCTURE.md  INDEX.md  TOOLS_GUIDE.md  VM_DEBUG_SETUP.md  api.md  architecture.md  ci-cd.md  cpm_integration.md  demo.md  deployment.md  eigen_extended_tests.md  file_structure.md  index.md  kernel_test_plan.md  known_issues.md  release_notes.md  testing.md  usage.md  wdk_config_quick_ref.md  wdk_version_config.md
docs/samples/gui_demo/: overview.md  readme.md  usage.md
fcl-source/include/fcl/: export.h  logging.h
fcl-source/include/fcl/geometry/: geometric_shape_to_BVH_model.h
fcl-source/include/fcl/narrowphase/: continuous_collision-inl.h
fcl-source/src/narrowphase/detail/: failed_at_this_configuration.cpp
kernel/FclMusaDriver/: FclMusaCoreLib.vcxproj  FclMusaDriver.sln  FclMusaDriver.vcxproj  FclMusaDriver.vcxproj.filters  FclMusaSelfTestLib.vcxproj
kernel/core/include/fclmusa/: broadphase.h  collision.h  distance.h  driver.h  geometry.h  ioctl.h  logging.h  platform.h  self_test.h  version.h
kernel/core/src/: driver_state.cpp
kernel/driver/: README.md
kernel/driver/msbuild/: FclMusaCoreLib.vcxproj  FclMusaDriver.vcxproj  FclMusaSelfTestLib.vcxproj  packages.config
kernel/driver/src/: device_control.cpp  device_control_demo.cpp  device_control_demo.h  driver_entry.cpp  driver_state.cpp  periodic_scheduler.cpp  periodic_scheduler.h  self_test.cpp
kernel/selftest/src/: eigen_extended_test.cpp  eigen_self_test.cpp  self_test.cpp
kernel/tests/src/: eigen_extended_test.cpp  self_test.cpp
openspec/: project.md
openspec/changes/add-kernel-ccd-support/: proposal.md  tasks.md
openspec/changes/keep-dpc-collision-no-crt/: proposal.md  tasks.md
openspec/changes/move-fcl-detection-to-dpc/: proposal.md  tasks.md
openspec/changes/port-fcl-to-kernel/: CCD_ANALYSIS.md  FCL_ANALYSIS_REPORT.md  README.md  proposal.md  tasks.detail.md
openspec/changes/refactor-thin-fcl-layer/: tasks.md
openspec/changes/update-use-upstream-fcl/: proposal.md  tasks.md
openspec/specs/kernel-periodic-collision/: spec.md
patches/: fcl-kernel-mode-minimal.patch  fcl-kernel-mode.patch
r0/driver/: README.md
r0/driver/msbuild/: FclMusaCoreLib.vcxproj  FclMusaDriver.vcxproj  FclMusaSelfTestLib.vcxproj
r0/selftest/src/: collision_self_test.cpp
samples/cli_demo/: compile.cmd
samples/gui_demo/: FCL_GUI_Modernization_Plan.md  FclGuiDemo.vcxproj  OVERVIEW.md  README.md  USAGE.md  main.cpp  run.cmd  simple_build.cmd  simple_compile.cmd
samples/gui_demo/src/: camera.cpp  fcl_driver.cpp  fcl_driver.h  main.cpp  obj_loader.h  renderer.h  scene.cpp
samples/r3_user_demo/: main.cpp
scripts/: build_all.ps1  build_and_sign_driver.ps1  build_demo.cmd  build_simplified.ps1  fcl_demo.cpp  manual_build.cmd  package_bundle.ps1  run_all_tests.ps1
scripts/gui_demo/: FclGuiDemo.vcxproj  README.md  build_log.txt  clean.cmd
scripts/gui_demo/src/: fcl_driver.cpp  fcl_driver.h  main.cpp  renderer.cpp  scene.cpp  window.cpp
src/kernel/FclMusaDriver/: FclMusaCoreLib.vcxproj  FclMusaSelfTestLib.vcxproj
src/kernel/driver/: README.md
src/tests/: r3_smoke.cpp
tests/: r3_collision_tests.cpp
tools/: build.config.example  build_all.cmd  build_all.ps1  build_and_sign_driver.ps1  build_demo.cmd  build_demo.ps1  build_simplified.ps1  common.ps1  common.psm1  fcl-self-test.ps1  fcl_demo.cpp  manage_driver.ps1  manual_build.cmd  package_bundle.ps1  run_all_tests.ps1  setup-hyperv-lab.ps1  setup_dependencies.ps1  sign_driver.ps1  test_vs_detect.cmd  test_wdk_config.ps1  test_wdk_resolve.ps1  verify_upstream.ps1  verify_upstream_sources.ps1
tools/gui_demo/: FclGuiDemo.vcxproj  README.md  build_gui_demo.cmd  run.cmd
tools/gui_demo/src/: camera.cpp  camera.h  fcl_driver.cpp  fcl_driver.h  main.cpp  obj_loader.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  window.cpp  window.h
tools/scenes/: arena_mix.txt  mesh_probe.txt  two_spheres.txt
tools/scripts/: QUICK_REFERENCE.md  README_diff_patch.md  README_view_patch.md  apply_fcl_patch.ps1  check_msvc_compatibility.ps1  diagnose_build_issues.ps1  diff_patch.ps1  init_driver_solution.ps1  install_wdk.ps1  regenerate_minimal_patch.ps1  restore_kernel_packages.ps1  run_all_tests.ps1  run_r3_tests.ps1  setup_dependencies.ps1  test_minimal_patch.ps1  view_patch.ps1
tools/templates/driver/: FclMusaCoreLib.vcxproj  FclMusaDriver.vcxproj  FclMusaDriver.vcxproj.filters  FclMusaSelfTestLib.vcxproj
(+112 files in other folders)
